// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`charts-form Renders \`charts-form\` with custom props 1`] = `
<widget-settings-group-stub
  title="Charts"
>
  <div
    class="layout pa-3 column"
  >
    <c-draggable-list-field-stub
      handle=".chart-drag-handler"
      value="[object Object],[object Object],[object Object]"
    >
      <div
        class="layout row align-center"
      >
        <div
          class="flex xs1"
        >
          <i
            aria-hidden="true"
            class="v-icon draggable material-icons theme--light chart-drag-handler"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="flex xs8"
        >
          <div
            class="layout row align-center"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
              style="font-size: 36px;"
            >
              stacked_bar_chart
            </i>
            <span
              class="ml-3"
            >
              
            </span>
          </div>
        </div>
        <div
          class="flex xs3"
        >
          <c-action-btn-stub
            type="edit"
          />
          <c-action-btn-stub
            type="delete"
          />
        </div>
      </div>
      <div
        class="layout row align-center"
      >
        <div
          class="flex xs1"
        >
          <i
            aria-hidden="true"
            class="v-icon draggable material-icons theme--light chart-drag-handler"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="flex xs8"
        >
          <div
            class="layout row align-center"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
              style="font-size: 36px;"
            >
              stacked_bar_chart
            </i>
            <span
              class="ml-3"
            >
              
            </span>
          </div>
        </div>
        <div
          class="flex xs3"
        >
          <c-action-btn-stub
            type="edit"
          />
          <c-action-btn-stub
            type="delete"
          />
        </div>
      </div>
      <div
        class="layout row align-center"
      >
        <div
          class="flex xs1"
        >
          <i
            aria-hidden="true"
            class="v-icon draggable material-icons theme--light chart-drag-handler"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="flex xs8"
        >
          <div
            class="layout row align-center"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
              style="font-size: 36px;"
            >
              stacked_bar_chart
            </i>
            <span
              class="ml-3"
            >
              
            </span>
          </div>
        </div>
        <div
          class="flex xs3"
        >
          <c-action-btn-stub
            type="edit"
          />
          <c-action-btn-stub
            type="delete"
          />
        </div>
      </div>
    </c-draggable-list-field-stub>
    <v-menu-stub
      bottom="true"
      closedelay="0"
      closeonclick="true"
      closeoncontentclick="true"
      contentclass=""
      maxheight="auto"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonclick="true"
      origin="top left"
      transition="v-menu-transition"
    >
      <v-list-stub>
        <v-list-tile-stub
          activeclass="primary--text"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            stacked_bar_chart
          </i>
          <span
            class="ml-3"
          >
            Bar chart
          </span>
        </v-list-tile-stub>
        <v-list-tile-stub
          activeclass="primary--text"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            show_chart
          </i>
          <span
            class="ml-3"
          >
            Line chart
          </span>
        </v-list-tile-stub>
        <v-list-tile-stub
          activeclass="primary--text"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            functions
          </i>
          <span
            class="ml-3"
          >
            Numbers
          </span>
        </v-list-tile-stub>
      </v-list-stub>
    </v-menu-stub>
  </div>
</widget-settings-group-stub>
`;

exports[`charts-form Renders \`charts-form\` with custom props 2`] = `undefined`;

exports[`charts-form Renders \`charts-form\` with default props 1`] = `
<widget-settings-group-stub
  title="Charts"
>
  <div
    class="layout pa-3 column"
  >
    <c-draggable-list-field-stub
      handle=".chart-drag-handler"
      value=""
    />
    <v-menu-stub
      bottom="true"
      closedelay="0"
      closeonclick="true"
      closeoncontentclick="true"
      contentclass=""
      maxheight="auto"
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="0"
      openonclick="true"
      origin="top left"
      transition="v-menu-transition"
    >
      <v-list-stub>
        <v-list-tile-stub
          activeclass="primary--text"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            stacked_bar_chart
          </i>
          <span
            class="ml-3"
          >
            Bar chart
          </span>
        </v-list-tile-stub>
        <v-list-tile-stub
          activeclass="primary--text"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            show_chart
          </i>
          <span
            class="ml-3"
          >
            Line chart
          </span>
        </v-list-tile-stub>
        <v-list-tile-stub
          activeclass="primary--text"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            functions
          </i>
          <span
            class="ml-3"
          >
            Numbers
          </span>
        </v-list-tile-stub>
      </v-list-stub>
    </v-menu-stub>
  </div>
</widget-settings-group-stub>
`;

exports[`charts-form Renders \`charts-form\` with default props 2`] = `undefined`;
